--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,39 @@
-name: Deploy Nginx
+name: Build and Push to Artifact Registry
 
 on:
-  workflow_dispatch
-jobs:
-  deploy:
+ workflow_dispatch
+
+env:
+  PROJECT_ID: heroic-throne-404808
+  REGION: us-central1
+  GAR_LOCATION: us-central1-docker.pkg.dev/heroic-throne-404808/sveltikit
+
+job:
+  build-push-artifact:
     runs-on: ubuntu-latest
     steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v3"
 
-    - name: code checkout
-      uses: actions/checkout@v2
+      - id: "auth"
+          uses: "google-github-actions/auth@v1"
+          with:
+            credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
 
-    - name: install the gcloud cli
-      uses: google-github-actions/auth@v1
-      with:
-        project_id: ${{ secrets.GOOGLE_PROJECT }}
-        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-        export_default_credentials: true
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v1"
 
-    - name: build and push the docker image
-      env:
-        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-      run: |
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
+
+      - name: "Docker auth"
+        run: |
         gcloud auth configure-docker us-central1-docker.pkg.dev
-        docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT/github-action/smaple:latest.la
-        docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT/github-action/smaple:latest
+        docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:1.0 .
+        docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:1.0
+		
+		
+		
+	
+		
+		
