--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
 name: Build and Push to Artifact Registry
 
 on:
- workflow_dispatch
-
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 env:
   PROJECT_ID: heroic-throne-404808
   REGION: us-central1
