--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ env:
   PROJECT_ID: heroic-throne-404808
   REGION: us-central1
   GAR_LOCATION: us-central1-docker.pkg.dev/heroic-throne-404808/sveltikit
+  IMAGE_TAG: 1.${{ github.run_number }}
 
 jobs:
   build-push-artifact:
@@ -31,5 +32,5 @@ jobs:
       - name: "Docker auth"
         run: |
           gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:1.0 .
-          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:1.0
+          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG .
+          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG
