--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ env:
   PROJECT_ID: heroic-throne-404808
   REGION: us-central1
   GAR_LOCATION: us-central1-docker.pkg.dev/heroic-throne-404808/sveltikit
-  IMAGE_TAG: 1.${{ github.run_number }}
 
 jobs:
   build-push-artifact:
@@ -28,9 +27,11 @@ jobs:
 
       - name: "Use gcloud CLI"
         run: "gcloud info"
+      - id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: "Docker auth"
         run: |
           gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG .
-          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG
+          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:${{ steps.vars.outputs.sha_short}} .
+          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:${{ steps.vars.outputs.sha_short}}
