--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ env:
   PROJECT_ID: heroic-throne-404808
   REGION: us-central1
   GAR_LOCATION: us-central1-docker.pkg.dev/heroic-throne-404808/sveltikit
+  
 
 jobs:
   build-push-artifact:
@@ -29,9 +30,10 @@ jobs:
         run: "gcloud info"
       - id: vars
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
+  
       - name: "Docker auth"
         run: |
+          IMAGE_TAG:${{ steps.vars.outputs.sha_short}}
           gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:${{ steps.vars.outputs.sha_short}} .
-          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:${{ steps.vars.outputs.sha_short}}
+          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG .
+          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG
