--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,6 @@ jobs:
   
       - name: "Docker auth"
         run: |
-          IMAGE_TAG: ${{ steps.vars.outputs.sha_short}}
           gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG .
-          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample:$IMAGE_TAG
+          docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample: ${{ steps.vars.outputs.sha_short}} .
+          docker push us-central1-docker.pkg.dev/$PROJECT_ID/sveltikit/sample: ${{ steps.vars.outputs.sha_short}}
